Edited main and data_augmentation files

--- a/main.ipynb
+++ b/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "12def0ad",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "id": "5ad21685",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "74e293f4",
    "metadata": {},
    "outputs": [],
@@ -81,10 +81,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "id": "59fb5b22",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msklearn\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mmodel_selection\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m train_test_split\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mutils\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mdata\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -94,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "c352af97",
    "metadata": {},
    "outputs": [
@@ -113,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "f70031e7",
    "metadata": {},
    "outputs": [],
@@ -137,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "d781afa8",
    "metadata": {},
    "outputs": [],
@@ -155,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "id": "8548d010",
    "metadata": {},
    "outputs": [
@@ -187,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "1fec6098",
    "metadata": {},
    "outputs": [
@@ -259,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "15fea0ac",
    "metadata": {},
    "outputs": [],
@@ -274,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "ab58f721",
    "metadata": {},
    "outputs": [],
@@ -320,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "31671771",
    "metadata": {},
    "outputs": [
@@ -392,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "84146817",
    "metadata": {},
    "outputs": [],
@@ -402,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "a4259b7d",
    "metadata": {},
    "outputs": [
@@ -466,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "e32d0b76",
    "metadata": {},
    "outputs": [
@@ -522,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "5d6f4503",
    "metadata": {},
    "outputs": [
@@ -747,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "39e6b8e6",
    "metadata": {},
    "outputs": [],
@@ -774,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "f6b4ba87",
    "metadata": {},
    "outputs": [
@@ -853,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": null,
    "id": "61a5ab66",
    "metadata": {},
    "outputs": [],
@@ -864,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "387bf560",
    "metadata": {},
    "outputs": [
@@ -892,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "id": "ca6311e6",
    "metadata": {},
    "outputs": [],
@@ -918,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "id": "16741f5b",
    "metadata": {},
    "outputs": [],
@@ -970,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "fbb62412",
    "metadata": {},
    "outputs": [],
@@ -994,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "id": "38a14902",
    "metadata": {},
    "outputs": [],
@@ -1359,9 +1371,110 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff704139",
+   "metadata": {},
+   "source": [
+    "**Data augmentation**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "id": "119a9d01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting numpy\n",
+      "  Downloading numpy-2.3.4-cp313-cp313-win_amd64.whl.metadata (60 kB)\n",
+      "Downloading numpy-2.3.4-cp313-cp313-win_amd64.whl (12.8 MB)\n",
+      "   ---------------------------------------- 0.0/12.8 MB ? eta -:--:--\n",
+      "   ------------ --------------------------- 3.9/12.8 MB 21.2 MB/s eta 0:00:01\n",
+      "   ----------------- ---------------------- 5.5/12.8 MB 15.1 MB/s eta 0:00:01\n",
+      "   ------------------------ --------------- 7.9/12.8 MB 13.1 MB/s eta 0:00:01\n",
+      "   ------------------------------ --------- 9.7/12.8 MB 12.1 MB/s eta 0:00:01\n",
+      "   ------------------------------------ --- 11.5/12.8 MB 11.6 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 12.8/12.8 MB 10.7 MB/s  0:00:01\n",
+      "Installing collected packages: numpy\n",
+      "Successfully installed numpy-2.3.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9a39252",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "fd98b779",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 3.13868523e-01  3.28092396e-01  3.28580767e-01 ...  9.28079151e-03\n",
+      "   3.80609953e-03  1.93650470e-04]\n",
+      " [ 3.77057940e-01  3.73742938e-01  3.72421443e-01 ...  9.52412002e-03\n",
+      "   1.63088273e-03 -4.72249556e-03]\n",
+      " [ 1.07046343e-01  1.06525585e-01  1.09400801e-01 ...  2.27350406e-02\n",
+      "   2.02000830e-02  2.07809173e-02]\n",
+      " ...\n",
+      " [ 5.14596641e-01  5.21411002e-01  5.20896733e-01 ...  7.89800379e-03\n",
+      "   1.27570028e-03  6.47930196e-04]\n",
+      " [ 4.18508917e-01  3.55609059e-01  2.84539878e-01 ... -1.74204516e-03\n",
+      "   4.45453310e-03  2.37740669e-03]\n",
+      " [-5.05090971e-03 -5.62830654e-04  6.12342730e-04 ... -3.27960448e-03\n",
+      "   2.37575686e-03  2.13326653e-04]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from utils.data_augmentation import augment_batch\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "data_path = \"data/ecg_preprocessed_train_val.npz\"\n",
+    "data = np.load(data_path)\n",
+    "\n",
+    "X = data[\"X\"]\n",
+    "y = data[\"y\"]\n",
+    "\n",
+    "\n",
+    "# Create a train val split\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X,y,test_size=0.05,random_state=42,stratify=y)\n",
+    "augmented_data = augment_batch(X_train)\n",
+    "print(augmented_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "438a8fa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_train = np.concatenate([X_train, augmented_data], axis=0) \n",
+    "print(merged_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9f2cfb8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1369,7 +1482,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "neural_networks",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1383,7 +1496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
